--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -13,6 +17,34 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+input[type="text"] {
+  padding: 1rem;
+  margin: 1rem;
+  width: 50vw;
+  border: 1px solid gray;
+  border-radius: 5px
+}
+
+input[type="text"]:hover,
+input[type="text"]:focus,
+input[type="text"]:active {
+  color: #0070f3;
+  border-color: #0070f3;
+}
+
+button {
+  border-radius: 5px;
+  border: 2px solid #007BFF;
+  padding: 0.5rem;;
+}
+
+button:hover,
+button:focus,
+button:active {
+  color: #0070f3;
+  box-shadow: 0 0 1px 1px #007BFF;
 }
 
 @media (prefers-color-scheme: dark) {
